--- a/SeleniumTest/.classpath
+++ b/SeleniumTest/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/selenium-server-standalone-3.11.0.jar"/>
 	<classpathentry kind="lib" path="lib/testng-6.11.jar"/>
+	<classpathentry kind="lib" path="lib/org.json.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
